--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ footer{
         </header>
         
         <nav>
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="Portfolio.html">Portfolio </a>
             <a href="Services.html">Services</a>
             <a href="Contact.html"">Contact</a>
@@ -74,3 +74,4 @@ footer{
 </body>
 
  </html>
+
